manifest/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
    nginx.server.location: /
  creationTimestamp: null
  labels:
    io.kompose.service: front
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: front
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
        nginx.server.location: /
      creationTimestamp: null
      labels:
        io.kompose.service: front
    spec:
      containers:
        - image: 480936841767.dkr.ecr.ap-northeast-2.amazonaws.com/interface_app:front-docker
          name: front-service
          ports:
            - containerPort: 9000
          resources: {}
      restartPolicy: Always
status: {}
