manifest/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
    nginx.server.location: /api/order
  creationTimestamp: null
  labels:
    io.kompose.service: order
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: order
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
        nginx.server.location: /api/order
      creationTimestamp: null
      labels:
        io.kompose.service: order
    spec:
      containers:
        - image: 480936841767.dkr.ecr.ap-northeast-2.amazonaws.com/interface_app:order-docker
          name: order-service
          ports:
            - containerPort: 9001
          resources: {}
      restartPolicy: Always
status: {}
