manifest/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
    nginx.server.location: /api/user
  creationTimestamp: null
  labels:
    io.kompose.service: user
  name: user
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
        nginx.server.location: /api/user
      creationTimestamp: null
      labels:
        io.kompose.service: user
    spec:
      containers:
        - image: 480936841767.dkr.ecr.ap-northeast-2.amazonaws.com/interface_app:user-docker
          name: user-service
          ports:
            - containerPort: 9002
          resources: {}
      restartPolicy: Always
status: {}
