manifest/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
    nginx.server.location: /api/order
  creationTimestamp: null
  labels:
    io.kompose.service: order
  name: order
spec:
  ports:
    - name: "9001"
      port: 9001
      targetPort: 9001
  selector:
    io.kompose.service: order
status:
  loadBalancer: {}
