manifest/store-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
    nginx.server.location: /api/store
  creationTimestamp: null
  labels:
    io.kompose.service: store
  name: store
spec:
  ports:
    - name: "9003"
      port: 9003
      targetPort: 9003
  selector:
    io.kompose.service: store
status:
  loadBalancer: {}
